--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 PORT=8000
 DATABASE=mongodb://localhost:27017/User_Authentication
+JWT_SECRET_KEY=ES234HJ67THHSFG789YHSG
+SMTP_MAIL=aqsaabdullah5834@gmail.com
+SMTP_PASSWORD=ccke thyv mvab nqiq
