--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ DATABASE=mongodb://localhost:27017/User_Authentication
 JWT_SECRET_KEY=ES234HJ67THHSFG789YHSG
 SMTP_MAIL=aqsaabdullah5834@gmail.com
 SMTP_PASSWORD=ccke thyv mvab nqiq
+FRONTEND_URL=https://o-auth-in-mern-stack-frontend-78x.vercel.app/login
