--- a/server/vercel.json
+++ b/server/vercel.json
@@ -16,9 +16,8 @@
       "src": "/api/(.*)",  
       "dest": "/api/$1",
       "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+        "Access-Control-Allow-Origin": "https://o-auth-in-mern-stack-frontend-78x.vercel.app/login",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
       }
     },
     {
