--- a/server/vercel.json
+++ b/server/vercel.json
@@ -13,17 +13,31 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",  
-      "dest": "/api/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "https://o-auth-in-mern-stack-frontend-78x.vercel.app/login",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
-      }
-    },
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ],
+  "headers": [
     {
-      "src": "/(.*)",  
-      "dest": "/$1"
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+        }
+      ]
     }
   ]
 }
-
